@@ -1,24 +1,18 @@
 package com.stayhub.api.config;
 
-import com.stayhub.api.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
-import org.springframework.security.authentication.ProviderManager;
-import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -27,69 +21,45 @@ import java.util.List;
 public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthFilter;
-    private final UserRepository userRepository;
+    private final AuthenticationProvider authenticationProvider;
 
-    @Bean
-    public UserDetailsService userDetailsService() {
-        return username -> userRepository.findByEmail(username)
-                .map(u -> org.springframework.security.core.userdetails.User.builder()
-                        .username(u.getEmail())
-                        .password(u.getPassword())
-                        .roles(u.getRole().name())
-                        .build())
-                .orElseThrow(() -> new RuntimeException("User not found"));
-    }
-
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
-
-    @Bean
-    public AuthenticationProvider authenticationProvider() {
-        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-        authProvider.setUserDetailsService(userDetailsService());
-        authProvider.setPasswordEncoder(passwordEncoder());
-        return authProvider;
-    }
-
-    @Bean
-    public AuthenticationManager authenticationManager() {
-        return new ProviderManager(List.of(authenticationProvider()));
-    }
-
-    // ĐÃ GỘP THÀNH 1 PHƯƠNG THỨC DUY NHẤT VÀ TỐI ƯU ĐƯỜNG DẪN SWAGGER
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         return http
-                // Kích hoạt cấu hình CORS mở và vô hiệu hóa CSRF để test API mượt mà
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
                 .authorizeHttpRequests(auth -> auth
-                        // Cho phép truy cập công khai không cần token vào Auth, Ảnh và tài liệu Swagger UI
-                        .requestMatchers(
-                                "/api/auth/**",
-                                "/uploads/**",
-                                "/v3/api-docs/**",
-                                "/swagger-ui/**",
-                                "/swagger-ui.html"
-                        ).permitAll()
-                        // Tất cả các cổng chức năng khác buộc phải có token hợp lệ
+                        // 1. Cổng API Đăng nhập/Đăng ký và xem phòng công khai cho phép truy cập tự do không cần Token
+                        .requestMatchers("/api/auth/**", "/auth/**").permitAll()
+                        .requestMatchers("/uploads/**", "/images/**").permitAll()
+                        .requestMatchers("/api/rooms", "/api/rooms/**", "/rooms/**").permitAll()
+
+                        // 2. 🌟 SỬA ĐỔI QUAN TRỌNG: Mở rộng Ant-Style matchers để bao quát toàn bộ cụm API con lồng nhau và Path Variables
+                        .requestMatchers("/api/admin", "/api/admin/**", "/api/admin/*************").hasAuthority("ROLE_ADMIN")
+                        .requestMatchers("/api/owner", "/api/owner/**", "/api/owner/*************").hasAnyAuthority("ROLE_ADMIN", "ROLE_OWNER")
+                        .requestMatchers("/api/staff", "/api/staff/**", "/api/staff/*************").hasAnyAuthority("ROLE_ADMIN", "ROLE_OWNER", "ROLE_STAFF")
+
+                        // 3. Các hành động tài nguyên hệ thống thông thường yêu cầu phải Đăng nhập hợp lệ
                         .anyRequest().authenticated()
                 )
                 .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authenticationProvider(authenticationProvider())
+                .authenticationProvider(authenticationProvider)
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
                 .build();
     }
 
-    // Cấu hình CORS mở khóa cho toàn bộ các thiết bị (Web, App) kết nối tới API
+    /**
+     * CẤU HÌNH CORS TOÀN DIỆN CHO THIẾT BỊ DI ĐỘNG (REAL DEVICE & EMULATOR)
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "Cache-Control"));
+        configuration.setAllowedOriginPatterns(List.of("*"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "X-Requested-With", "Cache-Control", "Origin"));
+        configuration.setExposedHeaders(List.of("Authorization"));
+        configuration.setAllowCredentials(true);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
